--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 .vscode/
 config.yml
 *.log
-!pics/README.md
-pics/*.png
-pics/*.jpg
-pics/*.jpeg
-pics*/
+!pics*/README.md
+pics*/*.png
+pics*/*.jpg
+pics*/*.jpeg
