--- a/sample-config.yml
+++ b/sample-config.yml
@@ -5,3 +5,5 @@ bwsignin: 'https://schools.mybrightwheel.com/sign-in'
 bwlist: 'https://schools.mybrightwheel.com/children/list'
 startdate: '01/01/2018'
 enddate: '07/07/2019'
+startpage: 0
+pagesize: 10
