Load config using yaml class

--- a/sample-config.yml
+++ b/sample-config.yml
@@ -1,9 +1,12 @@
-
+--- !Config
 bwuser: 'email address'
 bwpass: 'password'
+guardianid: null
+childids: []
 bwsignin: 'https://schools.mybrightwheel.com/sign-in'
 bwlist: 'https://schools.mybrightwheel.com/children/list'
 startdate: '01/01/2018'
 enddate: '07/07/2019'
 startpage: 0
 pagesize: 10
+timezone: 'America/Denver'
